# lecture-ai

./: README.md  package-lock.json  render.yaml
backend/: context.py  deploy.py  dockerfile  guardrails.py  me.txt  pyproject.toml  requirements.txt  server.py  utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/upload-url/: route.ts
frontend/components/: chat.tsx  chat2.tsx
